# WorkingWithC

./: .gitignore  CMakeLists.txt  records.txt
source/app/: CMakeLists.txt  app.c
source/controllers/: CMakeLists.txt
source/controllers/appControllers/: activities.c  activities.h
source/models/: CMakeLists.txt  fields.txt
source/models/generics/: dictionary.c  dictionary.h  generics.c  generics.h  list.c  list.h  queue.c  queue.h  stack.c  stack.h
source/models/transactions/: MTI.c  MTI.h
source/services/: CMakeLists.txt
source/services/appServices/: repository.c  repository.h  utilities.c  utilities.h
